gccida/g3/force_to_mode
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7104:28: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  force_to_mode( rtx x, machine_mode mode, unsigned __int64 mask, rtx reg, int just_select) 
                           ^
                           enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7108:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v9; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7114:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7115:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7125:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7125:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7126:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7127:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v29; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7131:4: error: expected ';' after expression
rtx v33; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7131:5: error: use of undeclared identifier 'v33'
rtx v33; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7134:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7134:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7155:4: error: expected ';' after expression
rtx v57; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7155:5: error: use of undeclared identifier 'v57'
rtx v57; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7173:4: error: expected ';' after expression
rtx v75; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7173:5: error: use of undeclared identifier 'v75'
rtx v75; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7177:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v79; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7178:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v80; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/combine.c:7179:4: error: expected ';' after expression
rtx v81; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_to_mode/src/obj/combine.o] Error 1
